# gp__stock__utils__cpp

./: CMakeLists.txt  README.md
include/gp_stock_utils/: candle.hpp  price_series.hpp  tick.hpp
test/: gp_stock_utils_test.cpp
